updated red-pill demo

--- a/red-pill-demo/project/data/com.metapolator/cps/index.html
+++ b/red-pill-demo/project/data/com.metapolator/cps/index.html
@@ -1,13 +1,14 @@
 lib/
+elementPropertiesDB/
 interpolated.cps
-wired-up.cps
-wide-light.cps
-condensed-extra-bold.cps
 wide-extra-bold.cps
 inherited.cps
+global.cps
+metapolated.cps
+base.cps
+condensed-extra-bold.cps
 condensed-light.cps
 enhanced.cps
+wide-light.cps
 centreline-skeleton-to-symmetric-outline.cps
-global.cps
-base.cps
-metapolated.cps
+wired-up.cps
