--- a/red-pill-demo/project/glyphs.skeleton.base/index.html
+++ b/red-pill-demo/project/glyphs.skeleton.base/index.html
@@ -1,34 +1,35 @@
-l.glif
-p.glif
-h.glif
-a.glif
-w.glif
+dvK_H_A_.glif
+dvD_H_A_.glif
+r.glif
 dvI_.glif
 j.glif
-z.glif
-s.glif
-dvD_H_A_.glif
-q.glif
 v.glif
-b.glif
-dvK_H_A_.glif
-f.glif
-t.glif
-r.glif
-u.glif
-e.glif
-c.glif
-dvD_A_.glif
-dvB_H_A_.glif
-contents.plist
-n.glif
-g.glif
 y.glif
-dvA_.glif
+a.glif
+g.glif
+p.glif
+c.glif
+l.glif
 d.glif
+q.glif
+dvB_H_A_.glif
+space.glif
+contents.plist
+w.glif
 x.glif
-m.glif
-o.glif
-k.glif
+n.glif
+f.glif
 i.glif
+z.glif
+h.glif
+u.glif
+b.glif
+e.glif
+dvD_A_.glif
 dvS_S_A_.glif
+t.glif
+s.glif
+o.glif
+dvA_.glif
+k.glif
+m.glif
