Fixing dependencies; app is loading but still dysfunctional.

--- a/app/index.html
+++ b/app/index.html
@@ -59,13 +59,9 @@
                 relativeUrls : false,
             };
         </script>
-        <script src="lib/bower_components/less.js/dist/less-1.7.0.min.js"></script>
+        <script src="lib/bower_components/less.js/dist/less.min.js"></script>
         <script src="lib/bower_components/requirejs/require.js"></script>
-        <script>
-        require(['lib/browserConfig.js'], function(){
-            require(['lib/metapolatorMain.js']);
-        });
-        </script>
+        <script src="lib/bootstrap.js"></script>
         <!-- end of development -->
         <!-- production
         <link rel="stylesheet" type="text/css" href="main.css" />
