typo: missing article

--- a/home/index.html
+++ b/home/index.html
@@ -164,7 +164,7 @@
                     <p>
                         The Metapolator project is a free, libre, open source project that is developed by a community of designers and developers.
                         It began in March 2013 when Simon Egli (a graphic and type designer from Switzerland) and Dave Crossland (a software freedom activist working to free typography) met in New York City to discuss the <a href="http://metaflop.com" title="Metaflop">Metaflop</a> project that Simon was contributing to.
-                        Metaflop is web-based graphical user interface to the <a href="http://en.wikipedia.org/wiki/Metafont" title="Metafont">Metafont</a> parametric font programming language, allowing non-programmers to adjust the parameters of a metafont intuitively.
+                        Metaflop is a web-based graphical user interface to the <a href="http://en.wikipedia.org/wiki/Metafont" title="Metafont">Metafont</a> parametric font programming language, allowing non-programmers to adjust the parameters of a metafont intuitively.
                     </p>
                     <p>
                         Simon had realised that the Bezier contours typically drawn by type designers, and stored in the <a href="http://unifiedfontobject.org/versions/ufo2/glif.html">UFO GLIF</a> XML format, could be converted into a Metafont <i>stroke</i> element, if they simply have an even number of points.
